<resources xmlns:tools="http://schemas.android.com/tools" tools:ignore="MissingTranslation">
    <string name="release_date">20160812</string>
    <string name="title_open_position_summary">Open Positions Summary</string>
    <string name="lb_message">Message : </string>
    <string name="lb_Message">Message</string>
    <string name="lb_status">Status : </string>
    <string name="lb_action">TRADE</string>
    <string name="title_transaction_status">Transaction Status</string>
    <string name="title_edit_order">Edit Order</string>
    <string name="db_open_position_summary">Open Positions Summary</string>
    <string name="db_open_position_listing">Open Positions</string>
    <string name="db_price_list">Market Quotes</string>
    <string name="db_chart">Chart</string>
    <string name="db_new_position">Market Order</string>
    <string name="db_price_summary">Chart</string>
    <string name="db_price_alert">Price Alert</string>
    <string name="db_price_alert_history">Price Alert Records</string>
    <string name="db_pending_order_listing">Pending Orders</string>
    <string name="db_new_order">Entry Order</string>
    <string name="db_liquidation_history">Liquidation History</string>
    <string name="db_setting">Settings</string>
    <string name="db_transaction_status">Transaction Status</string>
    <string name="db_executed_order_history">Executed Entry Orders</string>
    <string name="db_cancelled_order_history">Cancelled Orders</string>
    <string name="db_main_page">Main Page</string>
    <string name="lb_detail">DETAIL</string>
    <string name="db_online_statement">Online Statement</string>
    <string name="db_customize_list">User Portfolio</string>
    <string name="title_about_us">About OTX</string>
    <string name="title_liquidation_history">Liquidation History</string>
    <string name="lb_s_date">Sell Date :</string>
    <string name="lb_s_rate">Sell Price :</string>
    <string name="lb_b_rate">Buy Price :</string>
    <string name="lb_s_ref">Sell Ref. :</string>
    <string name="lb_b_ref">Buy Ref. :</string>
    <string name="lb_b_date">Buy Date :</string>
    <string name="lb_tran_time">TRAN. TIME</string>
    <string name="title_cancel_order">Cancelled Orders</string>
    <string name="lb_cancel_time">Can. Time : </string>
    <string name="lb_cancel_date">Can. Date : </string>
    <string name="lb_criteria">Criteria</string>
    <string name="lb_to">To</string>
    <string name="lb_from">From</string>
    <string name="lb_date_select">Enquiry</string>
    <string name="lb_today">Today</string>
    <string name="lb_executed_time">Exec. Time : </string>
    <string name="lb_executed_amount">EXE. AMT</string>
    <string name="lb_executed_lot">Exec. Lot  (Amount): </string>
    <string name="lb_executed_date">Exec. Date : </string>
    <string name="title_executed_order">Executed Entry Orders</string>
    <string name="lb_oco_ref">OCO REF.</string>
    <string name="lb_open_ref">OP. REF</string>
    <string name="lb_good_till">Good Till</string>
    <string name="lb_limit_stop">LMT/STP</string>
    <string name="lb_req_rate">R.RTE</string>
    <string name="title_pending_order">Pending Order</string>
    <string name="title_cancel_multiple_pending_order">Cancel Pending Order</string>
    <string name="lb_unselect">Deselect</string>
    <string name="lb_all">ALL</string>
    <string name="lb_select">Select</string>
    <string name="lb_un_select_all">Deselect All</string>
    <string name="lb_select_all">Select All</string>
    <string name="lb_buy_sell">B/S</string>
    <string name="lb_deal_rate">D.RTE</string>
    <string name="lb_floating">Float. P/L</string>
    <string name="lb_floating_with_quo">Float. P/L : </string>
    <string name="lb_offset">OFFSET</string>
    <string name="lb_amount">Amt.</string>
    <string name="lb_amount_with_quo">Amt.) : </string>
    <string name="lb_commission">Comm. : </string>
    <string name="lb_Contract">Contract</string>
    <string name="lb_tran_date">TRAN. DATE</string>
    <string name="lb_ref">Ref. : </string>
    <string name="title_liquidation">Liquidate</string>
    <string name="pop_action_buy">New Buy Deal</string>
    <string name="pop_action_sell">New Sell Deal</string>
    <string name="pop_action_buy_limit">New Buy Limit Order</string>
    <string name="pop_action_sell_limit">New Sell Limit Order</string>
    <string name="pop_action_buy_stop">New Buy Stop Order</string>
    <string name="pop_action_sell_stop">New Sell Stop Order</string>
    <string name="pop_action_title">Action</string>
    <string name="lb_liquidate">LIQUIDATE</string>
    <string name="title_open_position">Open Positions</string>
    <string name="title_contract_list">Market Quotes</string>
    <string name="liquidation_fail">Cannot liquidate different types of Contract together!</string>
    <string name="liquidation_error">Please select at least one record to liquidate.</string>
    <string name="are_you_sure">Are you sure ?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="title_login">Login</string>
    <string name="title_forgot_password">Forgot Password</string>
    <string name="title_change_password">Change Password</string>
    <string name="lb_user_name">Username</string>
    <string name="lb_password">Password</string>
    <string name="lb_new_password">New Password</string>
    <string name="lb_confirm_new_password">Confirm New Password</string>
    <string name="title_password_criteria">Password Criteria</string>
    <string name="lb_password_criteria_length">#s1-#s2 char(s) long</string>
    <string name="lb_password_criteria_optional">includes at least:</string>
    <string name="lb_password_criteria_optional_min_digit">#s digit(s)</string>
    <string name="lb_password_criteria_optional_min_lowercase">#s lowercase char(s)</string>
    <string name="lb_password_criteria_optional_min_uppercase">#s uppercase char(s)</string>
    <string name="lb_password_criteria_optional_min_symbol">#s1 symbol char(s) #s2</string>
    <string name="lb_save_password">Save Password</string>
    <string name="lb_practice_account">Demo</string>
    <string name="lb_production_account">Live</string>
    <string name="lb_practice_account_long">Demo</string>
    <string name="lb_production_account_long">Live</string>
    <string name="lb_forgot_password">Forgot Password</string>
    <string name="lb_forgot_password_remark">*Remark: For Practice Account Only</string>
    <string name="lb_account">Account:</string>
    <string name="lb_trader_account">Trader Account:</string>
    <string name="lb_account_name">Account Name:</string>
    <string name="lb_currency">Contract</string>
    <string name="lb_date">Date</string>
    <string name="lb_floating_pl">Floating P/L</string>
    <string name="lb_own_equity">Equity</string>
    <string name="lb_balance">New Balance</string>
    <string name="lb_usable_margin">Usable Margin</string>
    <string name="lb_equity_margin">EQUITY/MARGIN</string>
    <string name="lb_margin_requirement">Req. Margin</string>
    <string name="lb_effective_margin">Eff. Margin</string>
    <string name="lb_trade_date">Trade Date</string>
    <string name="lb_credit">Credit Limit</string>
    <string name="lb_credit_non_tradable">Non-Tradable Credit</string>
    <string name="lb_equity">Equity</string>
    <string name="lb_margin_call_amount">Call Margin</string>
    <string name="lb_magin_tradable">Tradable Unclear Margin</string>
    <string name="lb_magin_non_tradable">Non-Tradable Unclear Margin</string>
    <string name="lb_bid">Sell</string>
    <string name="lb_ask">Buy</string>
    <string name="lb_high">High:</string>
    <string name="lb_low">Low:</string>
    <string name="lb_total_amount">Total Amount</string>
    <string name="lb_lot">Lot</string>
    <string name="lb_rate">Price : </string>
    <string name="txt_splippage">Slippage</string>
    <string name="pageswitcher_previous_gesture">previous</string>
    <string name="pageswitcher_next_gesture">next</string>
    <string name="jan">Jan</string>
    <string name="feb">Feb</string>
    <string name="mar">Mar</string>
    <string name="apr">Apr</string>
    <string name="may">May</string>
    <string name="jun">Jun</string>
    <string name="jul">Jul</string>
    <string name="aug">Aug</string>
    <string name="sep">Sep</string>
    <string name="oct">Oct</string>
    <string name="nov">Nov</string>
    <string name="dec">Dec</string>
    <string name="title_new_position">Market Order</string>
    <string name="lb_buy">BUY</string>
    <string name="lb_sell">SELL</string>
    <string name="title_new_order">Entry Order</string>
    <string name="lb_oco">OCO :</string>
    <string name="lb_oco_alt">OCO Ref.:</string>
    <string name="lb_liquidate_ref">Liquidate :</string>
    <string-array name="sp_buy_sell">
        <item>BUY</item>
        <item>SELL</item>
    </string-array>
    <string-array name="sp_chart_type">
        <item>BAR</item>
        <item>LINE</item>
        <item>CANDLE</item>
    </string-array>
    <string-array name="sp_chart_period_map">
        <item>Minute</item>
        <item>FiveMinute</item>
        <item>FifteenMinute</item>
        <item>ThirtyMinute</item>
        <item>Hourly</item>
        <item>Daily</item>
        <item>Weekly</item>
        <item>Monthly</item>
    </string-array>
    <string-array name="sp_chart_period">
        <item>1 MIN</item>
        <item>5 MIN</item>
        <item>15 MIN</item>
        <item>30 MIN</item>
        <item>HOURLY</item>
        <item>DAILY</item>
        <item>WEEKLY</item>
        <item>MONTHLY</item>
    </string-array>
    <string name="tips">提示</string>
    <string name="str_other_login_point">您的账号已在别的设备上登录！</string>
    <string name="define">确认</string>
    <string name="str_register">注册</string>
    <string name="str_join_app">欢迎加入</string>
    <string name="str_email">邮箱账号</string>
    <string name="str_go_login">已有账号，去登录</string>
    <string name="str_register_agree">注册即代表您同意</string>
    <string name="str_code">验证码</string>
    <string name="login_ui_know">我知道了</string>
    <string name="toast_input_code">请输入您的验证码</string>
    <string name="sec_acc_ui_title">开通大圣证券账户</string>
    <string name="sec_acc_ui_select">请选择</string>
    <string name="sec_acc_ui_next">下一步</string>
    <string name="ui_email">电邮</string>
    <string name="ui_input_email">请输入您的电邮</string>
    <string name="ui_phone">电话</string>
    <string name="ui_input_phone">请输入您的电话</string>
    <string name="toast_input_email">请输入您的邮箱账号</string>
    <string name="str_get_code">发送验证码</string>
    <string name="str_user_agreement">《注册用户使用协议》</string>
    <string name="str_agreement_file">开户文件</string>
    <string name="str_client_agreement">客户协议书及风险披露声明</string>
    <string name="str_terms">使用条款及细则</string>
    <string name="str_north_trade">有关透过中华通北向交易之特别风险</string>
    <string name="str_american_trade">投资美国交易所上市证券的交易风险</string>
    <string name="str_aeoi">AEOI个人税务身份自我声明书(CRS/FATCA)</string>
    <string name="str_price_standard">收费标准</string>
    <string name="str_change_lan">繁简英切换声明</string>
    <string name="aaw_title">预约开户</string>
    <string name="aaw_tips">客户亦可预约指定时间于本公司开户。请填妥以下资料，我们将尽快与您联络，或您可致电客户服务热线(052)2111-0110</string>
    <string name="aaw_name">名称</string>
    <string name="aaw_input_name">请输入名称</string>
    <string name="aaw_date">日期</string>
    <string name="aaw_time">时间</string>
    <string name="anab_title">新增银行卡</string>
    <string name="anab_pls_camera_upload">请拍摄/上传银行卡</string>
    <string name="anab_camera_upload">拍摄/上传</string>
    <string name="anab_bank_name">银行名称</string>
    <string name="anab_bank_code">账户号码</string>
    <string name="anab_input_bank_code">请输入/核对账户号码</string>
    <string name="anab_bank_username">账户姓名</string>
    <string name="anab_input_bank_username">请输入账户姓名</string>
    <string name="anab_bank_type">账户类型</string>
</resources>