<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/whiteff">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:adjustViewBounds="true"
        android:scaleType="centerCrop"
        android:src="@mipmap/bg_signup">

    </ImageView>

    <RelativeLayout
        android:id="@+id/rl_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dp_24">

        <ImageView
            android:id="@+id/iv_back"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="@dimen/dp_16"
            android:src="@drawable/ic_gray33_left_back11">

        </ImageView>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:layout_centerHorizontal="true"
            android:text="@string/anab_title"
            android:textColor="@color/gray1e"
            android:textSize="@dimen/sp_18">

        </TextView>

    </RelativeLayout>

    <TextView
        android:id="@+id/tv_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/rl_title"
        android:layout_marginLeft="@dimen/dp_16"
        android:layout_marginTop="@dimen/dp_20"
        android:layout_marginBottom="@dimen/dp_20"
        android:text="@string/anab_pls_camera_upload"
        android:textColor="@color/gray1e"
        android:textSize="@dimen/sp_16">

    </TextView>

    <ImageView
        android:id="@+id/iv_bank"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:layout_below="@+id/tv_title"
        android:layout_marginLeft="@dimen/dp_16"
        android:layout_marginRight="@dimen/dp_16"
        android:adjustViewBounds="true"
        android:scaleType="fitXY"
        android:src="@mipmap/img_bankcard">

    </ImageView>

    <TextView
        android:id="@+id/tv_camera"
        android:layout_width="wrap_content"
        android:layout_height="@dimen/dp_44"
        android:layout_below="@+id/iv_bank"
        android:layout_centerHorizontal="true"
        android:layout_margin="@dimen/dp_16"
        android:background="@drawable/bg_yellowd2_frame_corner24"
        android:gravity="center"
        android:paddingLeft="@dimen/dp_60"
        android:paddingRight="@dimen/dp_60"
        android:text="@string/anab_camera_upload"
        android:textColor="@color/yellowd2"
        android:textSize="@dimen/sp_16">

    </TextView>

    <com.mfinance.everjoy.everjoy.view.AccountEditorInfoView
        android:id="@+id/ll_bank_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tv_camera"
        app:isEditor="false"
        app:isVisibilityGoto="true"
        app:txtLeft="@string/anab_bank_name"
        app:txtRightHint="@string/sec_acc_ui_select">

    </com.mfinance.everjoy.everjoy.view.AccountEditorInfoView>

    <com.mfinance.everjoy.everjoy.view.AccountEditorInfoView
        android:id="@+id/ll_bank_code"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/ll_bank_name"
        app:isEditor="true"
        app:isVisibilityGoto="false"
        app:txtLeft="@string/anab_bank_code"
        app:txtRightHint="@string/anab_input_bank_code">

    </com.mfinance.everjoy.everjoy.view.AccountEditorInfoView>

    <com.mfinance.everjoy.everjoy.view.AccountEditorInfoView
        android:id="@+id/ll_bank_username"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/ll_bank_code"
        app:isEditor="true"
        app:isVisibilityGoto="false"
        app:txtLeft="@string/anab_bank_username"
        app:txtRightHint="@string/anab_input_bank_username">

    </com.mfinance.everjoy.everjoy.view.AccountEditorInfoView>

    <com.mfinance.everjoy.everjoy.view.AccountEditorInfoView
        android:id="@+id/ll_bank_type"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/ll_bank_username"
        app:isEditor="false"
        app:isVisibilityGoto="true"
        app:txtLeft="@string/anab_bank_type"
        app:txtRightHint="@string/sec_acc_ui_select">

    </com.mfinance.everjoy.everjoy.view.AccountEditorInfoView>


    <TextView
        android:id="@+id/tv_start"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_44"
        android:layout_alignParentBottom="true"
        android:layout_marginLeft="@dimen/dp_16"
        android:layout_marginTop="@dimen/dp_20"
        android:layout_marginRight="@dimen/dp_16"
        android:layout_marginBottom="@dimen/dp_20"
        android:background="@drawable/bg_yellowd2_corner24"
        android:gravity="center"
        android:text="@string/sec_acc_ui_next"
        android:textColor="@color/whiteff"
        android:textSize="@dimen/sp_16">

    </TextView>


</RelativeLayout>