<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/whiteff"
    android:orientation="vertical">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:scaleType="centerCrop"
        android:adjustViewBounds="true"
        android:src="@mipmap/bg_sign">

    </ImageView>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dp_80"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="@dimen/dp_16"
            android:text="@string/str_join_app"
            android:textColor="@color/gray1e"
            android:textStyle="bold"
            android:textSize="@dimen/sp_32">

        </TextView>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dp_16"
            android:layout_marginLeft="@dimen/dp_16"
            android:layout_marginRight="@dimen/dp_16"
            android:text="@string/str_email"
            android:textColor="@color/gray1e"
            android:textSize="@dimen/sp_16">

        </TextView>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dp_8"
            android:orientation="horizontal">


            <EditText
                android:id="@+id/et_email"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginLeft="@dimen/dp_16"
                android:layout_marginRight="@dimen/dp_16"
                android:layout_weight="1"
                android:background="@null"
                android:gravity="center_vertical"
                android:hint="@string/toast_input_email"
                android:inputType="textEmailAddress"
                android:paddingTop="@dimen/dp_8"
                android:paddingBottom="@dimen/dp_8"
                android:textColor="@color/gray1e"
                android:textColorHint="@color/gray99"
                android:textSize="@dimen/sp_16">

            </EditText>

            <TextView
                android:id="@+id/tv_get_code"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginRight="@dimen/dp_16"
                android:text="@string/str_get_code"
                android:textColor="@color/blue18"
                android:textSize="@dimen/sp_12">

            </TextView>

        </LinearLayout>

        <View
            style="@style/ViewLine"
            android:layout_marginLeft="@dimen/dp_16"
            android:layout_marginRight="@dimen/dp_16"
            android:layout_marginTop="@dimen/dp_6">

        </View>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dp_40"
            android:layout_marginLeft="@dimen/dp_16"
            android:layout_marginRight="@dimen/dp_16"
            android:text="@string/str_code"
            android:textColor="@color/gray1e"
            android:textSize="@dimen/sp_16">

        </TextView>

        <EditText
            android:id="@+id/et_code"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/dp_16"
            android:layout_marginTop="@dimen/dp_16"
            android:layout_marginRight="@dimen/dp_16"
            android:background="@null"
            android:inputType="number"
            android:hint="@string/toast_input_code"
            android:paddingTop="@dimen/dp_8"
            android:paddingBottom="@dimen/dp_8"
            android:textColor="@color/gray1e"
            android:textColorHint="@color/gray99"
            android:textSize="@dimen/sp_16">

        </EditText>

        <View
            style="@style/ViewLine"
            android:layout_marginLeft="@dimen/dp_16"
            android:layout_marginRight="@dimen/dp_16"
            android:layout_marginTop="@dimen/dp_6">

        </View>

        <TextView
            android:id="@+id/tv_register"
            android:layout_width="match_parent"
            android:layout_height="@dimen/dp_44"
            android:layout_marginLeft="@dimen/dp_16"
            android:layout_marginTop="@dimen/dp_50"
            android:layout_marginRight="@dimen/dp_16"
            android:background="@drawable/bg_yellowd2_corner24"
            android:gravity="center"
            android:text="@string/str_register"
            android:textColor="@color/whiteff"
            android:textSize="@dimen/sp_16">

        </TextView>

        <TextView
            android:id="@+id/tv_go_login"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="@dimen/dp_20"
            android:layout_marginLeft="@dimen/dp_16"
            android:layout_marginRight="@dimen/dp_16"
            android:text="@string/str_go_login"
            android:textColor="@color/gray68"
            android:textSize="@dimen/sp_14">

        </TextView>

    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_alignParentBottom="true"
        android:layout_marginTop="@dimen/dp_8"
        android:orientation="horizontal"
        android:padding="@dimen/dp_16">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:text="@string/str_register_agree"
            android:textColor="@color/gray68"
            android:textSize="@dimen/sp_12">

        </TextView>

        <TextView
            android:id="@+id/tv_user_agreement"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:text="@string/str_user_agreement"
            android:textColor="@color/blue18"
            android:textSize="@dimen/sp_12">

        </TextView>

    </LinearLayout>

</RelativeLayout>